# synet

./: .gitignore  .gitlab-ci.yml  LICENSE.org  MANIFEST.in  Makefile  README.org  __init__.py  __main__.py  base.py  custom_patches.py  layers.py  legacy.py  models.py  pyproject.toml  quantize.py  requirements-11.8.txt  requirements.txt  test.py  train.py  yolov5.py  yolov5_patches.py
synet/: __init__.py  __main__.py  asymmetric.py  base.py  custom_patches.py  data_subset.py  demosaic.py  katana.py  layers.py  metrics.py  quantize.py  sabre.py  test.py  tflite_utils.py  ultralytics_patches.py  yolov5_patches.py
synet/backends/: __init__.py  custom.py  ultralytics.py
synet/zoo/: __init__.py  katana-qvga.yaml  katana-vga.yaml
synet/zoo/katana/: kqvga3-5.2.yaml  kvga3-7.2.yaml
synet/zoo/ultralytics/: sabre-detect-vga.yaml  sabre-keypoint-qvga.yaml  sabre-keypoint-vga.yaml  sabre-pose-vga.yaml  sabre-segment-vga.yaml
tests/: test_demosaic.py  test_keras.py  test_ultralytics.py
