[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "synet"
version = "0.1.4"
dependencies = [
    "torch",
    "keras",
    "tensorflow",
]

[project.optional-dependencies]
ultra = ["ultralytics"]

[tool.setuptools.package-data]
synet = ["zoo/**/*.yaml"]

[project.scripts]
synet = "synet.__main__:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
