[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "synet"
version = "0.2.3"
dependencies = [
    "torch",
    "tensorflow",
]

[project.optional-dependencies]
ultra = ["ultralytics"]
dev = ["synet[ultra]", "pytest"]

[tool.setuptools.package-data]
synet = ["zoo/**/*.yaml"]

[project.scripts]
synet = "synet.__main__:main"
