[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "synet"
version = "0.2.7"
dependencies = [
    "torch",
    "tensorflow",
]

[project.optional-dependencies]
ultra = ["ultralytics"]
hf = ['transformers', 'datasets', 'trl', 'peft', 'tf-keras', 'bitsandbytes']
dev = ["synet[ultra]", "pytest"]

[tool.setuptools.package-data]
synet = ["zoo/**/*.yaml"]

[project.scripts]
synet = "synet.__main__:main"
